--- a/src/photo-of-the-day/photoOfTheDay.scss
+++ b/src/photo-of-the-day/photoOfTheDay.scss
@@ -1,16 +1,19 @@
 
 .photoOfTheDayContainer{
     display: flex;
-    justify-content: center;
-    flex-columns: 1fr
-
-    
+    justify-content: center;    
 }
 
 .photo-of-the-day{
+
     width: 50%;
     margin: 50px;
     border-radius: 20px;
     border: 10px blue solid;
 
+}
+
+.explanation {
+    width: 70%;
+    margin: auto;
 }
