--- a/src/photo-of-the-day/photoOfTheDay.scss
+++ b/src/photo-of-the-day/photoOfTheDay.scss
@@ -1,15 +1,18 @@
 
-.photoOfTheDayContainer{
-    display: flex;
-    justify-content: center;    
-}
+ .photoOfTheDayContainer{
+     display: flex;
+     justify-content: center; 
+     //height: 10%;
+ }
 
 .photo-of-the-day{
 
-    width: 50%;
-    margin: 50px;
+    width: 70%;
+    //min-height: 0;
+    margin: auto;
     border-radius: 20px;
     border: 10px blue solid;
+    align-content: center;
 
 }
 
