--- a/src/Components/MissionManifest/MissionManifest.scss
+++ b/src/Components/MissionManifest/MissionManifest.scss
@@ -1,4 +1,4 @@
-@use "../App.scss" as AppCSS;
+@use "../../App.scss" as AppCSS;
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap');
 
 body{
