--- a/src/RoverImages/RoverImages.scss
+++ b/src/RoverImages/RoverImages.scss
@@ -1,55 +1,15 @@
-ul {
-  width: 100vw;
-  height: 300px;
-  padding: 20px;
-  display: flex;
-  gap: 4vw;
-  overflow-x: scroll;
-  overflow: hidden;
-  scroll-snap-type: x mandatory;
-  
-
-  li {
-    list-style-type: none;
-    padding: 20px;    
-    flex: 0 0 100%;
-    scroll-snap-align: center;
-    display: flex;
-    justify-content: center;
-  }
+body {
+  background: #062356;
+  color: #fffff2;
 }
 
-ul::scroll-button(left) {
-     content: "◄";
-   
-   right: calc(anchor(left) - 50px);
-    bottom: calc(anchor(top) + 13px);
+.sliderContainer {
+  max-width: 60%;
+  margin: auto;
+  padding: 40px;
 }
 
-ul::scroll-button(right) {
-     content: "►";
-   left: calc(anchor(right) - 50px);
-   bottom: calc(anchor(top) + 13px);
-}
-
-ul::scroll-button(*) {
-  border: 0;
-  font-size: 2rem;
-  background: none;
-  color: rgb(0 0 0 / 0.7);
-  cursor: pointer;
-}
-
-ul::scroll-button(*):hover,
-ul::scroll-button(*):focus {
-  color: rgb(0 0 0 / 1);
-}
-
-ul::scroll-button(*):active {
-  translate: 1px 1px;
-}
-
-ul::scroll-button(*):disabled {
-  color: rgb(0 0 0 / 0.2);
-  cursor: unset;
+.error {
+  text-align: center;
+  font-size: 50px;
 }
