--- a/src/Components/photoOfTheDay.scss
+++ b/src/Components/photoOfTheDay.scss
@@ -43,3 +43,9 @@ $general-font: "Public Sans";
     padding: 5px;
     text-align: center;
 }
+
+#random-button{
+    margin: auto;
+    color: $text-color;
+    background-color: #EE8434;
+}
