--- a/src/Components/RoverDetails/RoverDetails.scss
+++ b/src/Components/RoverDetails/RoverDetails.scss
@@ -81,6 +81,20 @@
         gap: 1rem;
         padding: 1rem;
         scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+
+        &::-webkit-scrollbar {
+            height: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: #999;
+        }
         
         button {
             flex: 0 0 auto;
