Add CSS stars background to website and centre profile text

--- a/src/pages/Profile/ProfilePage.scss
+++ b/src/pages/Profile/ProfilePage.scss
@@ -5,6 +5,7 @@ body {
     background-color: $blueBackground;
     color: $whiteFontColor;
     font-family: $PublicSans;
+    text-align: center;
 }
 
 
