--- a/src/pages/Profile/ProfilePage.scss
+++ b/src/pages/Profile/ProfilePage.scss
@@ -5,7 +5,9 @@ body {
     background-color: $blueBackground;
     color: $whiteFontColor;
     font-family: $PublicSans;
+    text-align: center;
 }
+
 
 
 .input-field{
