--- a/src/Components/RoverImages/RoverImages.scss
+++ b/src/Components/RoverImages/RoverImages.scss
@@ -1,12 +1,15 @@
+@import "../../Styles/GlobalStyles.scss";
+
+
 body {
   background: #062356;
   color: #fffff2;
 }
 
 .sliderContainer {
-  max-width: 30%;
+  width: 42.5vw;
   margin: auto;
-  padding: 40px;
+  padding: 20px 40px 30px 40px;
 }
 
 .error {
@@ -14,15 +17,28 @@ body {
   font-size: 50px;
 }
 
+h2 {
+  font-family: $PublicSans;
+  text-align: center;
+  padding: 100px auto;
+  font-size: 0.8rem;
+}
 
-@media screen and (max-width: 1000px) {
+
+@media (max-width: 898px) {
   .sliderContainer {
-    max-width: 60%;
+    width: 55vw;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 656px) {
   .sliderContainer {
-    max-width: 80%;
+    width: 65vw;
+  }
+}
+
+@media (max-width: 320px) {
+  .sliderContainer {
+    width: 70vw;
   }
 }
